--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
                 <h1 class="name-text">Acronical</h1>
             </div>
             <div class="socials">
-                <a href="https://www.github.com/AcronicalYT" class="social github">
+                <a href="https://www.github.com/AcronicalYT" class="social github" target="_blank">
                     <img class="icon" src="/assets/icons/github-icon.png" alt="GitHub">
                 </a>
-                <a href="https://youtube.com/@AcronicalYT" class="social youtube">
+                <a href="https://youtube.com/@AcronicalYT" class="social youtube" target="_blank">
                     <img class="icon" src="/assets/icons/youtube-icon.png" alt="YouTube">
                 </a>
-                <a href="https://twitch.tv/AcronicalYT" class="social twitch">
+                <a href="https://twitch.tv/AcronicalYT" class="social twitch" target="_blank">
                     <img class="icon" src="/assets/icons/twitch-icon.png" alt="Twitch">
                 </a>
-                <a href="https://discord.acronical.uk" class="social discord">
+                <a href="https://discord.acronical.uk" class="social discord" target="_blank">
                     <img class="icon" src="/assets/icons/discord-icon.png" alt="Discord">
                 </a>
-                <a href="https://twitter.com/AcronicalYT" class="social twitter">
+                <a href="https://twitter.com/AcronicalYT" class="social twitter" target="_blank">
                     <img class="icon" src="/assets/icons/twitter-icon.png" alt="Twitter">
                 </a>
-                <a href="https://www.ko-fi.com/Acronical" class="social kofi">
+                <a href="https://www.ko-fi.com/Acronical" class="social kofi" target="_blank">
                     <img class="icon" src="/assets/icons/ko-fi-icon.png" alt="Ko-fi">
                 </a>
             </div>
