--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Acronical's Socials</title>
     </head>
     <body>
-        <video class="bg-video" src="/assets/socials-bg-video.mp4" autoplay muted loop></video>
+        <video class="bg-video" src="/assets/socials-bg-video.mp4" autoplay muted loop playsinline preload="auto"></video>
 
         <div class="container">
             <div class="background-blur"></div>
