--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="/styles/socials.css">
         <meta charset="UTF-8">
+        <script src="/queries.js" defer></script>
         <title>Acronical's Socials</title>
     </head>
+
     <body>
         <video class="bg-video" src="/assets/socials-bg-video.mp4" autoplay muted loop playsinline preload="auto"></video>
 
@@ -15,24 +17,29 @@
             <div class="name">
                 <img class="pfp" src="/assets/pfp.png" alt="Acronical's Profile Picture">
                 <h1 class="name-text">Acronical</h1>
+                <p class="pronouns">🏳️‍⚧️ | She/They</p>
+                <p class="name-subtext">Developer | Content Creator | Streamer</p>
             </div>
             <div class="socials">
-                <a href="https://www.github.com/AcronicalYT" class="social github" target="_blank">
+                <a href="https://www.github.com/AcronicalYT" class="social" id="github" target="_blank">
                     <img class="icon" src="/assets/icons/github-icon.png" alt="GitHub">
                 </a>
-                <a href="https://www.youtube.com/@AcronicalYT" class="social youtube" target="_blank">
+                <a href="https://www.youtube.com/@AcronicalYT" class="social" id="youtube" target="_blank">
                     <img class="icon" src="/assets/icons/youtube-icon.png" alt="YouTube">
                 </a>
-                <a href="https://www.twitch.tv/AcronicalYT" class="social twitch" target="_blank">
+                <a href="https://www.twitch.tv/AcronicalYT" class="social" id="twitch" target="_blank">
                     <img class="icon" src="/assets/icons/twitch-icon.png" alt="Twitch">
                 </a>
-                <a href="https://discord.acronical.uk" class="social discord" target="_blank">
+                <a href="https://www.acronical.uk" class="social" id="website" target="_blank">
+                    <img class="icon" src="/assets/icons/website-icon.png" alt="Website">
+                </a>
+                <a href="https://discord.acronical.uk" class="social" id="discord" target="_blank">
                     <img class="icon" src="/assets/icons/discord-icon.png" alt="Discord">
                 </a>
-                <a href="https://www.twitter.com/AcronicalYT" class="social twitter" target="_blank">
+                <a href="https://www.twitter.com/AcronicalYT" class="social" id="twitter" target="_blank">
                     <img class="icon" src="/assets/icons/twitter-icon.png" alt="Twitter">
                 </a>
-                <a href="https://www.ko-fi.com/Acronical" class="social kofi" target="_blank">
+                <a href="https://www.ko-fi.com/Acronical" class="social" id="kofi" target="_blank">
                     <img class="icon" src="/assets/icons/ko-fi-icon.png" alt="Ko-fi">
                 </a>
             </div>
