--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="name">
                 <img class="pfp" src="/assets/pfp.png" alt="Acronical's Profile Picture">
                 <h1 class="name-text">Acronical</h1>
-                <p class="pronouns">🏳️‍⚧️ | She/They</p>
+<!--                <p class="pronouns">🏳️‍⚧️ | She/They</p>-->
                 <p class="name-subtext">Developer | Content Creator | Streamer</p>
             </div>
             <div class="socials">
